@@ -2290,6 +2290,8 @@ function rrdtool_function_graph($local_graph_id, $rra_id, $graph_data_array, $rr
 	if (!isset($graph_data_array['export_csv']) || $graph_data_array['export_csv'] != true) {
 		$graph_array = api_plugin_hook_function('rrd_graph_graph_options', array('graph_opts' => $graph_opts, 'graph_defs' => $graph_defs, 'txt_graph_items' => $txt_graph_items, 'graph_id' => $local_graph_id, 'start' => $graph_start, 'end' => $graph_end));
 
+        $graph_array = add_business_hours($graph_array);
+
 		if (!empty($graph_array)) {
 			$graph_defs = $graph_array['graph_defs'];
 			$txt_graph_items = $graph_array['txt_graph_items'];
@@ -3920,4 +3922,71 @@ function gradient($vname=FALSE, $start_color='#0000a0', $end_color='#f0f0f0', $l
 	}
 
 	return $hash.$hex;
+}
+
+/**
+ * add_business_hours - Add business hours highlight support for all rrdtool based charts
+ *
+ * @param  (array)  $data    - The graph_array data containing all rrdtool graph options
+ *
+ * @return (aray) - the graph_array containing AREA definitions for the business hours
+ *
+ */
+function add_business_hours($data) {
+    if (read_config_option("business_hours_enable") == "on") {
+        if ($data['start'] < 0 ) {
+            $bh_graph_start = time() + $data['start'];
+            $bh_graph_end = time() + $data["end"];
+        } else {
+            $bh_graph_start = $data['start'];
+            $bh_graph_end =  $data["end"];
+        }
+
+        preg_match("/(\d+)\:(\d+)/",read_config_option("business_hours_start"), $bh_start_matches);
+        preg_match("/(\d+)\:(\d+)/",read_config_option("business_hours_end"), $bh_end_matches);
+
+
+        $start_bh_time = mktime( $bh_start_matches[0],$bh_start_matches[1],0,date("m",$bh_graph_start),date("d",$bh_graph_start),date("Y",$bh_graph_start));
+        $end_bh_time = mktime( $bh_end_matches[0],$bh_end_matches[1],0,date("m",$bh_graph_end),date("d",$bh_graph_end),date("Y",$bh_graph_end));
+
+        if ($start_bh_time < $bh_graph_start) {
+            if ($start_bh_time < $end_bh_time) {
+                $start_bh_time = $bh_graph_start;
+            } else {
+                $start_bh_time = mktime( $bh_start_matches[0],$bh_start_matches[1],0,date("m",$bh_graph_start),date("d",$bh_graph_start)+1,date("Y",$bh_graph_start));
+            }
+        }
+
+        // Get the number of days:
+        $datediff = $bh_graph_end - $bh_graph_start;
+        $num_of_days = round($datediff / (60 * 60 * 24)) + 1;
+
+        if ($num_of_days <= read_config_option("business_hours_max_days")) {
+            for ($day=0; $day<$num_of_days; $day++ ) {
+                $current_start_bh_time = mktime($bh_start_matches[0],$bh_start_matches[1],0,date("m",$start_bh_time),date("d",$start_bh_time)+$day,date("Y",$start_bh_time));
+                $current_end_bh_time = mktime( $bh_end_matches[0],$bh_end_matches[1],0,date("m",$start_bh_time),date("d",$start_bh_time)+$day,date("Y",$start_bh_time));
+                if (  $current_start_bh_time < $bh_graph_start ) {
+                    $current_start_bh_time = $bh_graph_start;
+                }
+                if (  $current_end_bh_time > $bh_graph_end ) {
+                    $current_end_bh_time = $bh_graph_end;
+                }
+                $data[ 'graph_defs' ] .= 'CDEF:officehours' . $day . '=a,POP,TIME,' . $current_start_bh_time . ',LT,1,0,IF,TIME,' . $current_end_bh_time . ',GT,1,0,IF,MAX,0,GT,0,1,IF' . RRD_NL;
+                $data[ 'graph_defs' ] .= 'CDEF:dslimit' . $day . '=INF,officehours' . $day . ',*' . RRD_NL;
+
+                if ( preg_match('/[0-9A-Fa-f]{6,8}/',read_config_option("business_hours_color")) ) {
+                    $bh_color = read_config_option("business_hours_color");
+                } else {
+                    $bh_color = 'ccccccff';
+                }
+                if ( date("N",$current_start_bh_time) <6 ) {
+                    $data[ 'graph_defs' ] .= 'AREA:dslimit' . $day . '#' . $bh_color . RRD_NL;
+                }
+                if ( ( date("N",$current_start_bh_time) >5 ) && ( read_config_option("business_hours_hideWeekends") == "") ) {
+                    $data[ 'graph_defs' ] .= 'AREA:dslimit' . $day . '#'.$bh_color . RRD_NL;
+                }
+            }
+        }
+    }
+    return $data;
 }
